--- a/src/main/java/TicketGUI.form
+++ b/src/main/java/TicketGUI.form
@@ -30,14 +30,6 @@
         </constraints>
         <properties/>
       </component>
-      <component id="af1ed" class="javax.swing.JTable" binding="eventsTable">
-        <constraints>
-          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="50"/>
-          </grid>
-        </constraints>
-        <properties/>
-      </component>
       <component id="a9f8e" class="javax.swing.JButton" binding="submitButton">
         <constraints>
           <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
@@ -59,6 +51,20 @@
           </component>
         </children>
       </scrollpane>
+      <component id="53b6c" class="javax.swing.JComboBox" binding="keywordComboBox">
+        <constraints>
+          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties/>
+      </component>
+      <component id="d5361" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Keyword"/>
+        </properties>
+      </component>
     </children>
   </grid>
 </form>
